selfhost/test/typechecker/typeidentifier/error_modalias_unknown_module.out
Error at %FILE_NAME%:3:8
Unknown module 'ex'
  |  val _: ex.Bar[] = []
            ^
No module with that name is visible in current scope
