selfhost/test/typechecker/typeidentifier/error_modalias_unknown_module.abra
import "./_exports" as e

val _: ex.Bar[] = []
